novos exercicios em java

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 /Aula/Saque_ContaBancaria_Metodos/nbproject/private/
 /Aula/Saque_ContaBancaria_Metodos/build/
+/Aula/TestandoMetodosEstáticos/nbproject/private/
+/Aula/Java/Hora/nbproject/private/
+/Aula/Java/Hora/build/
+/Aula/Java/Linguagem/nbproject/private/
+/Aula/Java/Linguagem/build/
+/Aula/Java/Resolution/nbproject/private/
+/Aula/Java/Resolution/build/
