--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,14 @@
 /Aula/Java/Linguagem/build/
 /Aula/Java/Resolution/nbproject/private/
 /Aula/Java/Resolution/build/
+/Aula/Java/SwingTriângulo/nbproject/private/
+/Aula/Java/SwingTriângulo/build/
+/Aula/Java/SwingTriângulo/dist/
+/Aula/Java/Teste/nbproject/private/
+/Aula/Java/Teste/build/
+/Aula/Java/CalcTriangulo/nbproject/private/
+/Aula/Java/CalcTriangulo/build/
+/Aula/Java/CalcTrianguloSwing/nbproject/private/
+/Aula/Java/CalculadoraJavaFx/nbproject/private/
+/Aula/Java/CalculadoraJavaFx/build/
+/Aula/Java/CalculadoraJavaFx/dist/
