--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 /Aula/Java/CalculadoraJavaFx/nbproject/private/
 /Aula/Java/CalculadoraJavaFx/build/
 /Aula/Java/CalculadoraJavaFx/dist/
+/Aula/Java/TrabalhandoComImagens/nbproject/private/
+/Aula/Java/TrabalhandoComImagens/build/
+/Aula/Java/TrabalhandoComImagens/dist/
