--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 /Aula/Java/TrabalhandoComImagens/nbproject/private/
 /Aula/Java/TrabalhandoComImagens/build/
 /Aula/Java/TrabalhandoComImagens/dist/
+/Aula/Java/SomaJavaFx/nbproject/private/
+/Aula/Java/testandoTiposPrimitivos/nbproject/private/
+/Aula/Java/testandoTiposPrimitivos/build/
