--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 /Aula/Java/SomaJavaFx/nbproject/private/
 /Aula/Java/testandoTiposPrimitivos/nbproject/private/
 /Aula/Java/testandoTiposPrimitivos/build/
+/Aula/Java/CalculadoraIdade/nbproject/private/
+/Aula/Java/CalculadoraIdade/build/
