--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@
 /Aula/Java/testandoTiposPrimitivos/build/
 /Aula/Java/CalculadoraIdade/nbproject/private/
 /Aula/Java/CalculadoraIdade/build/
+/Aula/Java/SuperCalculadora/nbproject/private/
+/Aula/Java/SuperCalculadora/build/
