--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@
 /Aula/Java/CalculadoraIdade/build/
 /Aula/Java/SuperCalculadora/nbproject/private/
 /Aula/Java/SuperCalculadora/build/
+/Aula/Java/GenioAkinator/nbproject/private/
+/Aula/Java/GenioAkinator/build/
