--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@
 /Aula/Java/SuperCalculadora/build/
 /Aula/Java/GenioAkinator/nbproject/private/
 /Aula/Java/GenioAkinator/build/
+/Aula/Java/Eleicao/nbproject/private/
+/Aula/Java/Eleicao/build/
