--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@
 /Aula/Java/GenioAkinator/build/
 /Aula/Java/Eleicao/nbproject/private/
 /Aula/Java/Eleicao/build/
+/Aula/Java/CalculaEqSegundoGrau/nbproject/private/
+/Aula/Java/CalculaEqSegundoGrau/build/
