--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /Aula/Java/Eleicao/build/
 /Aula/Java/CalculaEqSegundoGrau/nbproject/private/
 /Aula/Java/CalculaEqSegundoGrau/build/
+/Aula/Java/Triangulo/nbproject/private/
+/Aula/Java/Triangulo/build/
