--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@
 /Aula/Java/CalculaEqSegundoGrau/build/
 /Aula/Java/Triangulo/nbproject/private/
 /Aula/Java/Triangulo/build/
+/Aula/Java/Fatorial/nbproject/private/
+/Aula/Java/Fatorial/build/
