--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@
 /Aula/Java/Triangulo/build/
 /Aula/Java/Fatorial/nbproject/private/
 /Aula/Java/Fatorial/build/
+/Aula/Java/Calculos/nbproject/private/
+/Aula/Java/Calculos/build/
