--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@
 /Aula/Java/Fatorial/build/
 /Aula/Java/Calculos/nbproject/private/
 /Aula/Java/Calculos/build/
+/Aula/Java/ExibidorNumeros/nbproject/private/
+/Aula/Java/ExibidorNumeros/build/
