--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@
 /Aula/Java/Calculos/build/
 /Aula/Java/ExibidorNumeros/nbproject/private/
 /Aula/Java/ExibidorNumeros/build/
+/Aula/Java/MesesDias/nbproject/private/
+/Aula/Java/MesesDias/build/
