--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@
 /Aula/Java/ExibidorNumeros/build/
 /Aula/Java/MesesDias/nbproject/private/
 /Aula/Java/MesesDias/build/
+/Aula/Java/ExibidorNumeros2/nbproject/private/
+/Aula/Java/ExibidorNumeros2/build/
